# ndlocr-lite-pdf

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: build_binary.py
src/ndlocr_lite_pdf/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
